# Proyecto_final

./: Proyecto final momento 1.docx  ~$oyecto final momento 1.docx
Momento II/: MOMENTO II.docx
Momento III/: Links.txt
codigo/Proyecto_final/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  resources.qrc
codigo/Proyecto_final/classes/: boss.cpp  boss.h  character.cpp  character.h  enemy.cpp  enemy.h  game.cpp  game.h  physicssystem.cpp  physicssystem.h  player.cpp  player.h  projectile.cpp  projectile.h  savemanager.cpp  savemanager.h
